--- a/extensionDirectory/popup.html
+++ b/extensionDirectory/popup.html
@@ -266,10 +266,10 @@
                   </div>
                 </div>
                 <div class="card-header__bottom-row">
-                  <pills-row
+                  <pillsRow
                     v-bind:count="count"
                     v-bind:dob="saved.defDOB"
-                  ></pills-row>
+                  ></pillsRow>
                 </div>
               </div>
             </div>
@@ -341,7 +341,7 @@
         </div>
       </div>
     </div>
-    <script id="script" src="components.js"></script>
+    <!-- <script id="script" src="components.js"></script> -->
     <script id="script" src="popup.js"></script>
     <script id="script" src="filings.js"></script>
   </body>
