--- a/extensionDirectory/popup.html
+++ b/extensionDirectory/popup.html
@@ -1,35 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="popup.css" rel="stylesheet" type="text/css" />
 
-    <!-- font awesome -->
-    <link
-      rel="stylesheet"
-      href="./node_modules/@fortawesome/fontawesome-free/css/all.css"
-    />
+    <link rel="stylesheet" href="index.css" />
 
-    <!-- jQuery -->
-    <script src="./node_modules/jquery/dist/jquery.js"></script>
-
-    <!-- Bootstrap -->
-    <link
-      rel="stylesheet"
-      href="./node_modules/bootstrap/dist/css/bootstrap.min.css"
-    />
-    <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-
-    <!-- Vue -->
-    <script src="./node_modules/vue/dist/vue.js"></script>
-
-    <!-- Smooth-Scroll -->
-    <script src="./node_modules/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
-
-    <!-- Gumshoe -->
-    <script src="./node_modules/gumshoejs/dist/gumshoe.polyfills.min.js"></script>
-
-    <!-- Moment -->
-    <script src="./node_modules/moment/min/moment.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" integrity="sha512-L7MWcK7FNPcwNqnLdZq86lTHYLdQqZaz5YcAgE+5cnGmlw8JT03QB2+oxL100UeB6RlzZLUxCGSS4/++mNZdxw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
 
   <body>
@@ -266,10 +241,10 @@
                   </div>
                 </div>
                 <div class="card-header__bottom-row">
-                  <pillsRow
+                  <pills-row
                     v-bind:count="count"
                     v-bind:dob="saved.defDOB"
-                  ></pillsRow>
+                  ></pills-row>
                 </div>
               </div>
             </div>
@@ -341,8 +316,6 @@
         </div>
       </div>
     </div>
-    <!-- <script id="script" src="components.js"></script> -->
-    <script id="script" src="popup.js"></script>
-    <script id="script" src="filings.js"></script>
+    <script id="script" src="build/index.js"></script>
   </body>
 </html>
