Get popup rendering as a separtae app drive by a vue 3 sfc

--- a/extensionDirectory/popup.html
+++ b/extensionDirectory/popup.html
@@ -2,319 +2,13 @@
 <html>
   <head>
 
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="build/index.css" />
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" integrity="sha512-L7MWcK7FNPcwNqnLdZq86lTHYLdQqZaz5YcAgE+5cnGmlw8JT03QB2+oxL100UeB6RlzZLUxCGSS4/++mNZdxw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
 
   <body>
     <div id="filing-app">
-      <div id="coverDiv" class="empty-state" v-if="saved.counts.length == 0">
-        <div id="logoDivCover">
-          <img
-            id="code4btv"
-            src="./images/code4BTV-logo-300-300.png"
-            alt="Home"
-            class="logos"
-          />
-          <img
-            id="legal-aid"
-            src="./images/VLA_logo-200-97px.png"
-            alt="Home"
-            class="logos"
-          />
-        </div>
-        <div class="popup-edition-wrap">
-          <p class="popup-edition">ExpungeVT 4.1.1 - Co-counsel Edition</p>
-          <p class="popup-edition-sub">Expunge Harder. Expunge Smarter.</p>
-        </div>
-        <div class="inset text-center button-div">
-          <button
-            v-on:click="addDocketCounts"
-            class="add-docket-info btn btn-primary"
-          >
-            Add From Page <i class="fas fa-plus-circle"></i>
-          </button>
-          <button
-            v-on:click="loadCaseFile"
-            class="add-docket-info btn btn-primary"
-          >
-            Load Case File<br /><i class="fas fa-file"></i>
-          </button>
-          <button
-            v-on:click="addAndOpenManagePage"
-            class="edit-counts btn btn-primary"
-          >
-            Add/Edit <i class="fas fa-edit"></i>
-          </button>
-        </div>
-        <p v-if="popupHeadline != ''" id="introText" v-html="popupHeadline"></p>
-        <p v-else></p>
-        <a
-          id="vtCourtsOnlineA"
-          class="title-page__link"
-          target="_blank"
-          href="https://publicportal.courts.vt.gov/Portal"
-        >
-          <p id="vtCourtsOnline">
-            <b
-              >Vermont Judiciary Public Portal
-              <i class="fas fa-external-link-alt"></i
-            ></b>
-          </p>
-        </a>
-        <a target="_blank" href="disclaimer.html" class="title-page__link">
-          <p>Terms &amp; Conditions <i class="fas fa-external-link-alt"></i></p>
-        </a>
-        <div class="donate-box">
-          <a
-            class="edit-counts btn btn-success donate title-page__link"
-            href="https://www.paypal.com/paypalme/c4btv"
-            target="_blank"
-          >
-            Donate to Code for BTV!&nbsp;&nbsp;&nbsp;<i
-              class="fas fa-hand-holding-usd"
-            ></i>
-          </a>
-        </div>
-      </div>
-      <div class="active-state" v-else>
-        <div class="popTop">
-          <div id="defendantInfo">
-            <div class="pet-item">
-              <p class="section-label">Petitioner Information</p>
-            </div>
-            <div class="pet-item">
-              <p class="pet-label">Name:</p>
-              <input
-                type="text"
-                class="form-control form-control-sm"
-                v-model="saved.defName"
-              />
-            </div>
-            <div class="pet-item">
-              <p class="pet-label">DOB:</p>
-              <input
-                class="form-control form-control-sm"
-                type="date"
-                v-model="saved.defDOB"
-              />
-            </div>
-            <div class="pet-item">
-              <p class="pet-label">Address:</p>
-              <textarea
-                class="form-control form-control-sm"
-                v-model="saved.defAddress"
-                placeholder="e.g. 123 Main Street"
-              ></textarea>
-            </div>
-            <div class="pet-item">
-              <p class="pet-label">Email:</p>
-              <input
-                type="text"
-                class="form-control form-control-sm"
-                v-model="saved.defEmail"
-              />
-            </div>
-          </div>
-          <div id="logoDiv">
-            <button
-              v-on:click="confirmClearData"
-              class="clear-data btn btn-outline-secondary"
-            >
-              Clear All
-            </button>
-            <img
-              src="./images/code4BTV-logo-300-300.png"
-              alt="Home"
-              class="logos"
-            />
-            <img
-              src="./images/VLA_logo-200-97px.png"
-              alt="Home"
-              class="logos"
-            />
-          </div>
-        </div>
-        <div class="pet-item pet-label-info">
-          <span>
-            <a
-              class=""
-              data-toggle="collapse"
-              href="#bugWarning"
-              role="button"
-              aria-expanded="false"
-              aria-controls="bugWarning"
-            >
-              <i class="fas fa-exclamation-triangle"></i>
-              Issues and Bugs?
-            </a>
-          </span>
-          <div class="collapse" id="bugWarning">
-            <div class="card card-body">
-              Closing all petition windows (without closing browser) may help
-              stop unexpected behavior. Save your file in the petitions screen
-              before closing the browser, and try restarting the browser. If you
-              are still experiencing issues, contact
-              <a href="https://codeforbtv.org/contact/" target="_blank"
-                >Code for BTV for assistance.</a
-              >
-            </div>
-          </div>
-        </div>
-        <div class="popTop inset text-center bottom-div">
-          <div class="inset text-center button-div">
-            <button v-on:click="addDocketCounts" class="btn btn-primary">
-              Add From Page <i class="fas fa-plus-circle"></i>
-            </button>
-            <button
-              v-on:click="openManagePage"
-              data-edit-counts
-              class="edit-counts btn btn-primary"
-            >
-              Add/Edit <i class="fas fa-edit"></i>
-            </button>
-            <button v-on:click="openPetitionsPage" class="btn btn-success">
-              Petitions <i class="fas fa-external-link-alt"></i>
-            </button>
-          </div>
-        </div>
-        <p id="runningCount" class="section-label">
-          Counts ({{saved.counts.length}})
-        </p>
-        <div id="countCards" class="count-cards inset text-center">
-          <!-- begin card -->
-
-          <div
-            class="card"
-            v-bind:id="count.uid"
-            v-for="(count, index) in saved.counts"
-          >
-            <div class="card-header">
-              <div class="card-header__column">
-                <div class="card-header__title-row">
-                  <div id="description-date" class="card-header__meta-data">
-                    <div class="card-header__description btn btn-link btn-sm">
-                      <p v-if="count.docketNum">
-                        <b>
-                          <a v-bind:href="count.url" target="_blank">
-                            {{count.docketNum}} {{count.county | toCountyCode
-                            }}</a
-                          ></b
-                        >
-                      </p>
-                      <p v-if="count.description">
-                        <b>{{count.description}}</b>
-                      </p>
-                    </div>
-                    <p
-                      class="card-header__disposition-date"
-                      v-if="count.dispositionDate"
-                    >
-                      Est. Disposition: {{count.dispositionDate |
-                      dateFormatSimple}} ({{count.dispositionDate | sinceNow}}
-                      ago)
-                    </p>
-                  </div>
-                  <div class="card-header__select">
-                    <select
-                      class="form-control form-control-sm"
-                      v-model="count.filingType"
-                      class="petitionSelect selectpicker"
-                    >
-                      <option value="X">No Filing</option>
-                      <option value="ExC">Expunge Conviction</option>
-                      <option value="ExNC">Expunge Non-Conviction</option>
-                      <option value="ExNCrim">Expunge Non-Criminal</option>
-                      <option value="SC">Seal Conviction</option>
-                      <option value="SDui">Seal DUI</option>
-                      <option value="StipExC">(Stip) Expunge Conviction</option>
-                      <option value="StipExNC"
-                        >(Stip) Expunge Non-Conviction</option
-                      >
-                      <option value="StipExNCrim"
-                        >(Stip) Expunge Non-Criminal</option
-                      >
-                      <option value="StipSC">(Stip) Seal Conviction</option>
-                      <option value="StipSDui">(Stip) Seal DUI</option>
-                    </select>
-                  </div>
-                </div>
-                <div class="card-header__bottom-row">
-                  <pills-row
-                    v-bind:count="count"
-                    v-bind:dob="saved.defDOB"
-                  ></pills-row>
-                </div>
-              </div>
-            </div>
-
-            <div class="collapse-section">
-              <div class="card-body">
-                <p>County:&nbsp;{{count.county}}</p>
-
-                <p v-if="count.titleNum || count.sectionNum">
-                  Statute:&nbsp;{{count.titleNum}} V.S.A.
-                  <span
-                    v-html="'&nbsp;&sect; ' + count.sectionNum "
-                    v-if="count.sectionNum"
-                  ></span
-                  >&nbsp;({{count.offenseClass}})
-                </p>
-                <p>
-                  Disposition:&nbsp;{{count.offenseDisposition}}
-                  <span v-if="!count.offenseDisposition"
-                    >Check Docket Sheet</span
-                  >
-                </p>
-                <div class="row text-left">
-                  <div class="col-4">
-                    Offense Date:<br />
-                    <span v-if="!count.allegedOffenseDate"
-                      >&nbsp;Not Entered</span
-                    >
-                    <span v-else
-                      >{{count.allegedOffenseDate | dateFormatSimple}}
-                      ({{count.allegedOffenseDate |
-                      stringAgeInYearsAtDate(saved.defDOB)}})</span
-                    >
-                  </div>
-                  <div class="col-4">
-                    Arrest/Citation Date:<br />
-                    <span v-if="!count.arrestCitationDate"
-                      >&nbsp;Not Entered</span
-                    >
-                    <span v-else
-                      >{{count.arrestCitationDate | dateFormatSimple}}
-                      ({{count.arrestCitationDate |
-                      stringAgeInYearsAtDate(saved.defDOB)}})</span
-                    >
-                  </div>
-                  <div class="col-4">
-                    Disposition Date:<br />
-                    <span v-if="!count.dispositionDate">&nbsp;Pending</span>
-                    <span v-else
-                      >{{count.dispositionDate | dateFormatSimple}}
-                      ({{count.dispositionDate |
-                      stringAgeInYearsAtDate(saved.defDOB)}})</span
-                    >
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- end card -->
-        </div>
-        <div id="bottomText" class="inset text-center bottom-div">
-          <p>
-            ExpungeVT is a Code for BTV product developed in coordination with
-            Vermont Legal Aid.
-            <span class="reset-settings" v-on:click="resetSettings"
-              ><b>Reset Settings</b></span
-            >
-          </p>
-        </div>
-      </div>
     </div>
     <script id="script" src="build/index.js"></script>
   </body>
