Fix path from /build/index.js to /index.js

--- a/extensionDirectory/static/popup.html
+++ b/extensionDirectory/static/popup.html
@@ -2,7 +2,7 @@
 <html>
   <head>
 
-    <link rel="stylesheet" href="build/index.css" />
+    <link rel="stylesheet" href="index.css" />
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" integrity="sha512-L7MWcK7FNPcwNqnLdZq86lTHYLdQqZaz5YcAgE+5cnGmlw8JT03QB2+oxL100UeB6RlzZLUxCGSS4/++mNZdxw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
@@ -10,6 +10,6 @@
   <body>
     <div id="filing-app">
     </div>
-    <script id="script" src="build/index.js"></script>
+    <script id="script" src="index.js"></script>
   </body>
 </html>
