--- a/extensionDirectory/static/filings.html
+++ b/extensionDirectory/static/filings.html
@@ -20,7 +20,7 @@
     />
 
     <!-- Vue -->
-    <script src="./node_modules/vue/dist/vue.js"></script>
+    <script src="./node_modules/vue/dist/vue.global.js"></script>
 
     <!-- Smooth-Scroll -->
     <script src="./node_modules/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
