add folders to src

--- a/src/pages/popup/popup.html
+++ b/src/pages/popup/popup.html
@@ -9,7 +9,7 @@
     integrity="sha512-L7MWcK7FNPcwNqnLdZq86lTHYLdQqZaz5YcAgE+5cnGmlw8JT03QB2+oxL100UeB6RlzZLUxCGSS4/++mNZdxw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-  <script id="script" type="module" src="index.js"></script>
+  <script id="script" type="module" src="popup.js"></script>
 </head>
 
 <body>
