--- a/src/pages/filings/index.html
+++ b/src/pages/filings/index.html
@@ -118,7 +118,7 @@
             <button v-on:click="saveHtml" class="btn btn-primary no-print">
               Save
             </button>
-            <a href="manage-counts.html" class="edit-counts btn btn-primary">Add/Edit Counts <i
+            <a href="manage-counts/index.html" class="edit-counts btn btn-primary">Add/Edit Counts <i
                 class="fas fa-edit"></i></a>
             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
               Settings
