--- a/src/pages/manage-counts/index.html
+++ b/src/pages/manage-counts/index.html
@@ -3,16 +3,7 @@
 
 <head>
   <title>Add and Edit Counts</title>
-  <link href="index.css" rel="stylesheet" type="text/css" />
-
-  <!-- Smooth-Scroll -->
-  <script src="./node_modules/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
-
-  <!-- Gumshoe -->
-  <script src="./node_modules/gumshoejs/dist/gumshoe.polyfills.min.js"></script>
-
-  <!-- font awesome -->
-  <link rel="stylesheet" href="./node_modules/@fortawesome/fontawesome-free/css/all.css" />
+  <script type='module' src='./counts.js'></script>
 </head>
 
 <body id="manage-counts">
