--- a/src/pages/disclaimer/index.html
+++ b/src/pages/disclaimer/index.html
@@ -3,11 +3,8 @@
 
 <head>
   <title>Expunge VT Terms and Conditions</title>
-  <link href="filings.css" rel="stylesheet" type="text/css" />
 
-  <!-- Bootstrap -->
-  <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css" />
-  <script type='module' src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script type='module' src='./disclaimer.js'></script>
 </head>
 
 <body id="disclaimer">
