--- a/src/pages/filings/index.html
+++ b/src/pages/filings/index.html
@@ -136,7 +136,7 @@
             <td>
               <section class="no-print disclaimer-message">
                 Verify documents below against docket sheet to confirm
-                information is accurate and complete. <br /><a href="disclaimer.html" target="_blank">Terms and
+                information is accurate and complete. <br /><a href="disclaimer/index.html" target="_blank">Terms and
                   Conditions.</a>
               </section>
 
