commit from parent directory and disclaimer change

--- a/extensionDirectory/static/disclaimer.html
+++ b/extensionDirectory/static/disclaimer.html
@@ -21,20 +21,11 @@
         referenced herein, is inclusive of, but is not limited to, the ExpungeVT
         Google Chrome extension, any associated or linked web page, any document
         generated through the extension or related pages, and any other linked
-        or otherwise related pages, documentation, materials or information.
+        or otherwise related pages, documentation, materials or information. By agreeing to these terms, you agree to provide, at no cost to the client, expungement or sealing assistance, to at least one (1) client per calendar year within twelve (12) months of the first use of ExpungeVT in that year.
       </p>
       <p>
         ExpungeVT is intended only for attorney use and should only be used by,
-        or under the supervision of, a licensed Vermont attorney. Any
-        information provided through ExpungeVT, expressly or impliedly, does
-        not, and is not intended to, constitute legal advice. Instead, ExpungeVT
-        is provided for general informational purposes only. Information
-        obtained through ExpungeVT does not constitute the most up-to-date legal
-        or other information and should be verified with a more direct source of
-        legal or factual authority. ExpungeVT contains links to other
-        third-party websites. Such links are only for the convenience of the
-        user. The Contributors and their members do not recommend or endorse the
-        contents of the third-party sites.
+        or under the supervision of, a licensed Vermont attorney. Any information provided through ExpungeVT, expressly or impliedly, does not, and is not intended to, constitute legal advice. Instead, ExpungeVT is provided for general informational purposes only. Information obtained through ExpungeVT does not constitute the most up-to-date legal or other information and should be verified with a more direct source of legal or factual authority. ExpungeVT contains links to other third-party websites. Such links are only for the convenience of the user. The Contributors and their members do not recommend or endorse the contents of the third-party sites.
       </p>
       <p>
         All liability with respect to actions taken or not taken based on
