--- a/extensionDirectory/static/filings.html
+++ b/extensionDirectory/static/filings.html
@@ -31,8 +31,8 @@
       href="./node_modules/@fortawesome/fontawesome-free/css/all.css"
     />
 
-    <!-- Moment -->
-    <script src="./node_modules/moment/min/moment.min.js"></script>
+    <!-- dayjs -->
+    <script src="./node_modules/dayjs/dayjs.min.js"></script>
   </head>
 
   <body>
